# mindwell

./: .gitignore  AGENTS.md  BOOTSTRAP.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: release.yml
docs/: architecture.md  migration.md  multi-writer.md  releasing.md
examples/: questions.json
examples/fictional-vault/wiki/projects/: legacy-alerting-replacement.md  observability-migration.md
prompts/: fresh-agent-setup.md
scripts/: privacy_scan.py
src/loby/: __init__.py  benchmark.py  cli.py  config.py  coordinator.py  doctor.py  engine.py  scaffold.py
src/mindwell/: __init__.py  advisor.py  automations.py  cli.py  config.py  doctor.py  engine.py  guidance.py  scaffold.py  uncertainty.py  updater.py
tests/: test_framework.py
