[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "mindwell-framework"
version = "0.2.0"
description = "Source-preserving personal operating system for AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Skylar Pearce"}]
dependencies = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Office/Business :: Scheduling",
]

[project.urls]
Homepage = "https://github.com/skyflyt/mindwell"
Repository = "https://github.com/skyflyt/mindwell"
Issues = "https://github.com/skyflyt/mindwell/issues"

[project.optional-dependencies]
semantic = ["numpy>=1.26"]

[project.scripts]
mindwell = "mindwell.cli:main"
loby = "mindwell.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
